add detail page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="about">About</string>
     <string name="my_name">Rafli Zocky Leonard</string>
     <string name="my_email">raflizocky@gmail.com</string>
+    <string name="title_detail">Title</string>
+    <string name="description_detail">Description Detail</string>
 
     <string-array name="data_name">
         <item>Pokemon Go</item>
