--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="game_name">Game Name</string>
     <string name="description">Description</string>
     <string name="about">About</string>
+    <string name="share">Share</string>
     <string name="my_name">Rafli Zocky Leonard</string>
     <string name="my_email">raflizocky@gmail.com</string>
     <string name="title_detail">Title</string>
