--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="my_email">raflizocky@gmail.com</string>
     <string name="title_detail">Title</string>
     <string name="description_detail">Description Detail</string>
+    <string name="detail_info">Game Info</string>
 
     <string-array name="data_name">
         <item>Pokemon Go</item>
@@ -48,5 +49,49 @@
         <item>@drawable/rocket_league</item>
         <item>@drawable/league_of_legends</item>
     </integer-array>
+
+    <string-array name="data_info">
+    <item>
+        Rating : 4.5/5\t
+        Last Version : 1.2.3
+    </item>
+        <item>
+        Rating : 4.0/5\t
+        Last Version : 1.3.0
+    </item>
+        <item>
+        Rating : 4.8/5\t
+        Last Version : 2.0.1
+    </item>
+        <item>
+        Rating : 3.9/5\t
+        Last Version : 1.1.5
+    </item>
+        <item>
+        Rating : 4.7/5\t
+        Last Version : 2.1.0
+    </item>
+        <item>
+        Rating : 4.6/5\t
+        Last Version : 1.4.2
+    </item>
+        <item>
+        Rating : 4.3/5\t
+        Last Version : 1.5.0
+    </item>
+        <item>
+        Rating : 4.9/5\t
+        Last Version : 2.2.0
+    </item>
+        <item>
+        Rating : 4.4/5\t
+        Last Version : 1.6.3
+    </item>
+        <item>
+        Rating : 4.2/5\t
+        Last Version : 2.3.1
+    </item>
+    </string-array>
+
 
 </resources>
